--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "level-js": "^2.2.4",
+    "level-pathwise": "^3.0.3",
     "leveldown": "^3.0.0",
     "levelup": "^2.0.2",
     "nem-sdk": "^1.6.4",
     "nodemon": "^1.17.3"
+  },
+  "devDependencies": {
+    "eslint-config-google": "^0.9.1"
   }
 }
